사랑합니다

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ replay_pid
 .metadata
 .settings/
 
+# Compiled class file
+*.class
+
 # End of httpswww.toptal.comdevelopersgitignoreapijava
 
 bin/
