--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 ### Java ###
 # Compiled class file
-.class
+*.class
 
 # Log file
 .log
@@ -31,9 +31,8 @@ replay_pid
 .metadata
 .settings/
 
-# Compiled class file
-*.class
-
 # End of httpswww.toptal.comdevelopersgitignoreapijava
 
 bin/
+
+target/
