--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <description>자바유틸</description>
 
 	<dependencies>
-	
+		<!--/java-utils/src/main/java/lib/Json.java -->
 		<dependency>
 		    <groupId>net.minidev</groupId>
 		    <artifactId>json-smart</artifactId>
@@ -19,6 +19,15 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.10.3</version>
 		</dependency>
+		<!-- -->
+		
+		<!--/java-utils/src/main/java/lib/Poi.java -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>3.9</version>
+		</dependency>
+		<!-- -->
 	
 	</dependencies>
 </project>
