--- a/pom.xml
+++ b/pom.xml
@@ -1,33 +1,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>javaMaven</groupId>
-  <artifactId>java-utils</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>java-utils</name>
-  <description>자바유틸</description>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>javaMaven</groupId>
+	<artifactId>java-utils</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>java-utils</name>
+	<description>자바유틸</description>
 
 	<dependencies>
 		<!--/java-utils/src/main/java/lib/Json.java -->
 		<dependency>
-		    <groupId>net.minidev</groupId>
-		    <artifactId>json-smart</artifactId>
-		    <version>2.5.0</version>
+			<groupId>net.minidev</groupId>
+			<artifactId>json-smart</artifactId>
+			<version>2.5.0</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>com.fasterxml.jackson.core</groupId>
-		    <artifactId>jackson-databind</artifactId>
-		    <version>2.10.3</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.10.3</version>
 		</dependency>
 		<!-- -->
-		
+
 		<!--/java-utils/src/main/java/lib/Poi.java -->
 		<dependency>
-		    <groupId>org.apache.poi</groupId>
-		    <artifactId>poi-ooxml</artifactId>
-		    <version>3.9</version>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
 		</dependency>
 		<!-- -->
-	
+
+		<!-- /java-utils/src/main/java/lib/Lib_000_lombok.java -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- -->
+
 	</dependencies>
 </project>
