--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,12 @@
 		</dependency>
 		<!-- -->
 
+		<!-- html을 자바에서 컨트롤 하는 라이브러리 -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.21.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
