--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,24 @@
 			<version>1.21.1</version>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/com.google.genai/google-genai : 제미나이 -->
+		<dependency>
+			<groupId>com.google.genai</groupId>
+			<artifactId>google-genai</artifactId>
+			<version>1.23.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
